--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
   <body onload="force();">
     <h1>Grocery List</h1>
-    <p>If you want to add or delete a shopping item, type the name of the food<br>If you want to move an item up or down, type the number on the left of the item in the list</p>
+    <p>If you want to add or delete a shopping item, type the name of the food<br>If you want to move an item up or down, type the number on the left(and subtract by 1, so say you want item 1 you need to type 0) of the item in the list</p>
     <br>
     <br>
     <div class="list">
