--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 }
     body {
       background-color: rgb(10,4,5);
+       justify-content: center;
+       align-items: center;
+      flex-direction: column;
       color: yellow;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     } 
