--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
 }
     body {
+      display: flex above everything;
       background-color: rgb(10,4,5);
        justify-content: center;
        align-items: center;
