--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Grocery List</title>
+  <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag">
   <style> 
     h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
