--- a/index.html
+++ b/index.html
@@ -5,30 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Grocery List</title>
   <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag">
-  <style> 
-    h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: purple;
-    
-    
-}
-    body {
-      display: flex above everything;
-      background-color: rgb(10,4,5);
-       justify-content: center;
-       align-items: center;
-      flex-direction: column;
-      color: yellow;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    } 
-
-.textinput {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-  </style>
+<link rel="stylesheet" href="style.css">
   <script src="john.js"></script>
 </head>
   <body onload="force();">
