--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Grocery List</title>
-  <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag" width="200" height = "200">
+  <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag">
 <link rel="stylesheet" href="style.css">
   <script src="john.js"></script>
 </head>
