--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Grocery List</title>
   <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag">
 <link rel="stylesheet" href="style.css">
-  <script src="john.js"></script>
+  <script>
+  </script>
 </head>
   <body onload="force();">
     <h1>Grocery List</h1>
