--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function MoveUpandMoveDown(frontal_indexP) {
   </script>
 </head>
   <body onload="force();">
-    <h1>Grocery List</h1>
+    <h1>Grocery Items List</h1>
     <img id="Grocery" src="06WALMART-4-jumbo.jpg" alt="Puttingitemsinbag">
     <p>Add an item and delete one by typing a name in the box</p>
      <p> Move an item up and down by typing a number (and subtract by 1, so say you want item 1 you need to type 0) of the item</p>
