--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     function force() {
     standard = document.getElementById("standard");
     Item = document.getElementById("item");
-    countBox = document.getElementById("count");
+    counrtex = document.getElementById("counrtex");
     ShoppingList = ["Cupcakes", "Coke", "Bacon", "Skittles"];
     showcase();
 }
