--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ function MoveUpandMoveDown(frontal_indexP) {
       <p></p>
       <button onclick = "Addanitem();">Add a food item </button>
       <p></p>
-      <button onclick = "MoveUpandMoveDown(1);">Move an item down</button>
+      <button onclick = "MoveUpandMoveDown(1);">Item down</button>
       <p></p>
-      <button onclick = "MoveUpandMoveDown(-1);">Move an item up</button>
+      <button onclick = "MoveUpandMoveDown(-1);">Item up</button>
         </div>
     <div class="standard">
       <div id="standard"></div>
