--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Grocery Item List</title>
+  <title>Grocery Item  Store</title>
 <link rel="stylesheet" href="style.css">
   <script>
     function force() {
